# And-ActiveObject

app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: ActiveObject.cpp  ActiveObject.h  CppSurface.cpp  CppSurface.h  CppSurfaceView.cpp  CppSurfaceView.h  GLDraw.cpp  GLDraw.h  JniIF.cpp  JniIF.h  Matrix.cpp  Matrix.h
app/src/main/java/com/test/cppsurfaceviewtrans/: MainActivity.java  NativeFunc.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
